src/Backend-Kafka/Cloud_stream/flask.yaml
# k8s-flask-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: xrkkkt/docker_demo2:stream
        ports:
        - containerPort: 5001
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5001
  selector:
    app: flask-app
