src/Backend-Kafka/Cloud_stream/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: a2e76caddc53a42968fd20adc824a306-1758958381.us-east-1.elb.amazonaws.com   # 使用您的域名
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vue-frontend-service
            port:
              number: 80
